--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         overflow: hidden;
       }
 
+      /* --- RetroBoard Mention Highlight --- */
+      @keyframes highlight-fade {
+        from { background-color: rgba(0, 255, 0, 0.5); }
+        to { background-color: transparent; }
+      }
+      .message-highlight {
+        animation: highlight-fade 3s ease-out forwards;
+      }
+
       /* --- Classic Mac UI Styles --- */
       .classic-window {
         background-color: var(--window-bg);
